refactor: remove pending job system from worker add: implement project-level secret loading